[package]
name = "wotreplays-rparser"
version = "0.1.0"
edition = "2021"

[dependencies]
bstr = "1.9.1"
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
eframe = "0.27.2"
rfd = "0.14.1"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
xlsxwriter = "0.6.0"
